results/SpecGenBench/4-shot/log-UniqueNumNested-2023_11_28_02_34_45.txt
public class UniqueNumNested {

    //@ requires arr != null;
    //@ ensures \result == -1 <==> (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length && i != j; arr[i] != arr[j]);
    //@ ensures 0 <= \result && \result < arr.length ==> (\forall int i; 0 <= i && i < \result; arr[i] != arr[\result]);
    public static int uniqueNum(int[] arr) {
        //@ maintaining (\forall int i, j; 0 <= i && i < s.length() && 0 <= j && j < s.length() && i != j; arr[i] != arr[j]);
        //@ maintaining 0 <= i && i <= s.length();
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            //@ maintaining (\forall int j; i+1 <= j && j < s.length(); arr[i] != arr[j]);
            //@ maintaining i+1 <= j && j <= s.length();
            //@ decreases s.length() - j;
            for (int j = i + 1; j < s.length(); ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            if(j == s.length())
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:10: error: cannot find symbol
        for (int i = 0; i < s.length(); ++i) {
                            ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:7: error: variable i is already defined in method uniqueNum(int[])
        //@ maintaining (\forall int i, j; 0 <= i && i < s.length() && 0 <= j && j < s.length() && i != j; arr[i] != arr[j]);
                                     ^
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:7: error: cannot find symbol
        //@ maintaining (\forall int i, j; 0 <= i && i < s.length() && 0 <= j && j < s.length() && i != j; arr[i] != arr[j]);
                                                         ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:7: error: cannot find symbol
        //@ maintaining (\forall int i, j; 0 <= i && i < s.length() && 0 <= j && j < s.length() && i != j; arr[i] != arr[j]);
                                                                                     ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:8: error: cannot find symbol
        //@ maintaining 0 <= i && i <= s.length();
                                       ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:9: error: cannot find symbol
        //@ decreases s.length() - i;
                      ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:14: error: cannot find symbol
            for (int j = i + 1; j < s.length(); ++j) {
                                    ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:11: error: variable j is already defined in method uniqueNum(int[])
            //@ maintaining (\forall int j; i+1 <= j && j < s.length(); arr[i] != arr[j]);
                                         ^
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:11: error: cannot find symbol
            //@ maintaining (\forall int j; i+1 <= j && j < s.length(); arr[i] != arr[j]);
                                                            ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:12: error: cannot find symbol
            //@ maintaining i+1 <= j && j <= s.length();
                                             ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:13: error: cannot find symbol
            //@ decreases s.length() - j;
                          ^
  symbol:   variable s
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            if(j == s.length())
               ^
  symbol:   variable j
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            if(j == s.length())
                    ^
  symbol:   variable s
  location: class UniqueNumNested
13 errors

